# Spec-Hops

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGL.sln  Spec-Hops.js  Spec-Hops.wasm  index.html  readme.md
.github/workflows/: release.yaml
OpenGL/: .clang-format  CMakeLists.txt  OpenGL.vcxproj  OpenGL.vcxproj.filters  diff.txt  out.txt
OpenGL/res/maps/: Facility.txt  Map.txt  SpaceShip.txt  SpaceView.txt  simple.txt
OpenGL/res/shaders/: Floortile.shader  cinders.wgsl  fog.shader  fog.wgsl  laser.shader  line.shader  line.wgsl  particles.wgsl  particlesCompute.wgsl  shader.shader  squareObject.wgsl  square_object.wgsl  stars.shader  stars.vert.glsl  stars.wgsl
OpenGL/res/shaders/includes/: lab.shader
OpenGL/src/: Application.cpp  Application.h  AudioEngine.cpp  AudioEngine.h  GameObject.cpp  GameObject.h  Generator.h  GeometryUtils.cpp  GeometryUtils.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  SceneGeometry.cpp  SceneGeometry.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  WeakMemoizeConstructor.h  WeakMemoizeConstructor.hpp  World.cpp  World.h  res_path.hpp.in  stb_image.h
OpenGL/src/game_objects/: Background.cpp  Background.h  Bomb.cpp  Bomb.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Decal.cpp  Decal.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Fog.cpp  Fog.h  GameObject.cpp  GameObject.h  GeometryUtils.cpp  GeometryUtils.h  Mine.cpp  Mine.h  Particles.cpp  Particles.h  Player.cpp  Player.h  SquareObject.cpp  SquareObject.h  Tile.cpp  Tile.h
OpenGL/src/game_objects/enemies/: Bomber.cpp  Bomber.h  LaserTurret.cpp  LaserTurret.h  Turret.cpp  Turret.h  TurretHead.cpp  TurretHead.h
OpenGL/src/game_objects/entities/: Bomb.cpp  Bomb.h  Mine.cpp  Mine.h
OpenGL/src/game_objects/ui/: Text.cpp  Text.h  UiText.cpp  UiText.h
OpenGL/src/geometry/: AABB.h  BVH.cpp  BVH.h  GeometryUtils.cpp  GeometryUtils.h  SceneGeometry.cpp  SceneGeometry.h
OpenGL/src/gpu/: webgpu-utils.cpp  webgpu-utils.h
OpenGL/src/rendering/: BindGroup.h  BindGroupLayout.h  Buffer.h  CommandEncoder.cpp  CommandEncoder.h  ComputePass.cpp  ComputePass.h  ComputePipeline.h  DataFormats.h  DeadBuffers.cpp  DeadBuffers.h  Id.cpp  Id.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  TextureSampler.h  VertexBufferLayout.h  webgpu-utils.h
web/: template.html
web/static/css/: styles.css
